edit profile view initialized

--- a/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_accept_students.xml
@@ -11,19 +11,89 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginBottom="50dp"
+        android:fontFamily="@font/roboto"
         android:text="Requests to Join the Course"
+        android:textColor="#004D40"
+        android:textSize="27sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
-        android:layout_width="409dp"
-        android:layout_height="599dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="131dp" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardAcceptStudents"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="24dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="14dp"
+        app:cardElevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvAcceptStudentsHeader">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/ivStudentRequestDp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/img_tempimage" />
+
+            <TextView
+                android:id="@+id/tvAcceptStudentName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/roboto"
+                android:text="Jake Williams"
+                android:textColor="#004D40"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@+id/ivStudentRequestDp"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btnConfirm"
+                android:layout_width="85dp"
+                android:layout_height="33dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/btnConfirm"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ivStudentRequestDp"
+                app:layout_constraintTop_toBottomOf="@+id/tvAcceptStudentName" />
+
+            <Button
+                android:id="@+id/btnDelete"
+                android:layout_width="85dp"
+                android:layout_height="33dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="53dp"
+                android:layout_marginBottom="16dp"
+                android:backgroundTint="@color/gray"
+                android:text="@string/btnDelete"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btnConfirm"
+                app:layout_constraintTop_toBottomOf="@+id/tvAcceptStudentName" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
