--- a/app-tracker-teacher/app/src/main/res/layout/activity_classlist.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_classlist.xml
@@ -122,7 +122,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/ivProfileSettings"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginTop="28dp"
@@ -135,7 +135,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_more_settings_foreground" />
+            app:srcCompat="@drawable/ic_more_settings_foreground"
+            android:onClick="showPopup"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
