--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_class.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_class.xml
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toBottomOf="@+id/topBar">
 
         <ImageButton
-            android:id="@+id/addStudents"
+            android:id="@+id/btnAcceptStudents"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="5dp"
@@ -99,7 +99,7 @@
             app:layout_constraintVertical_bias="0.509" />
 
         <TextView
-            android:id="@+id/txtAddClass"
+            android:id="@+id/txtCreateMeeting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
