--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
@@ -93,7 +93,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/studentListRecyclerView"
         app:layout_constraintTop_toBottomOf="@id/statusBar"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
