--- a/app-tracker-student/app/src/main/res/values/colors.xml
+++ b/app-tracker-student/app/src/main/res/values/colors.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="light_green">#00a357</color>
+    <color name="dark_green">#00703c</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red_light">#D85858</color>
+    <color name="red_dark">#601919</color>
+    <color name="blue_light">#3B71C3</color>
+    <color name="blue_dark">#223165</color>
+    <color name="yellow">#D6C367</color>
+    <color name="orange">#BD7034</color>
+    <color name="green">#387837</color>
+    <color name="pink">#F3C5CF</color>
+    <color name="gray">#A8A8A8</color>
+    <color name="light_gray">#EEEEEE</color>
 </resources>
