--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
@@ -98,4 +98,16 @@
         android:paddingStart="20dp"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnDelete"
+        android:text="delete"
+        app:layout_constraintTop_toBottomOf="@id/studentListRecyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/red_light"
+        android:layout_marginTop="20dp"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
