--- a/app-tracker-student/app/src/main/res/layout/activity_single_meeting_view.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_single_meeting_view.xml
@@ -4,19 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SingleMeetingView"
-    tools:layout_editor_absoluteX="-25dp"
-    tools:layout_editor_absoluteY="10dp">
+    tools:context=".SingleMeetingView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/topBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:padding="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:id="@+id/topBar"
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/txtClassTitle"
@@ -43,7 +41,7 @@
         android:id="@+id/txtDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:text="JULY 31, 2021 | M"
         android:textColor="#004D40"
         android:textSize="25sp"
@@ -52,37 +50,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topBar" />
 
-    <TextView
-        android:id="@+id/tvMeeting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:fontFamily="sans-serif"
-        android:text="CODE:"
-        android:textColor="#004D40"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/statusBar"
-        tools:layout_editor_absoluteX="187dp" />
-
-    <TextView
-        android:id="@+id/tvCourseCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:fontFamily="@font/roboto"
-        android:text="MOBDEVE+S15+0001"
-        android:textColor="#004D40"
-        app:layout_constraintTop_toBottomOf="@+id/tvMeeting"
-        tools:layout_editor_absoluteX="137dp" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/statusBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/statusBar"
+        app:layout_constraintTop_toBottomOf="@id/txtDate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtDate">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        >
 
         <TextView
             android:id="@+id/txtStatusText"
@@ -99,9 +75,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:background="@drawable/template_rounded_corner"
+            android:background="#66BB6A"
             android:padding="5dp"
-            android:text="CLOSED"
+            android:text="OPEN"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:textStyle="bold"
@@ -112,14 +88,34 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/studentListRecyclerView"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/etMeetingCode"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvCourseCode"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="97dp"
+        android:ems="10"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        android:text="Enter meeting code"
+        android:textColor="@color/gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statusBar" />
+
+    <Button
+        android:id="@+id/btnTakeAttendance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="162dp"
+        android:fontFamily="@font/roboto"
+        android:text="Enter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etMeetingCode" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
