--- a/app-tracker-student/app/src/main/res/layout/layout_meeting.xml
+++ b/app-tracker-student/app/src/main/res/layout/layout_meeting.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_meetingbox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,27 +9,29 @@
     android:backgroundTint="#EEEEEE"
     android:padding="20dp">
 
-    <Switch
-        android:id="@+id/switchIsPresent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#004D40"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/txtStudentName"
+        android:id="@+id/txtStudentsPresent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="LAST NAME, FIRST NAME"
+        android:text="69"
         android:textColor="#004D40"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:text="JULY 69, 1969 | M"
+        android:textColor="#004D40"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/txtStudentsPresent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
