--- a/app-tracker-teacher/app/src/main/res/layout/activity_edit_course.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_edit_course.xml
@@ -26,13 +26,11 @@
         android:id="@+id/btnCancelEdit"
         android:layout_width="98dp"
         android:layout_height="48dp"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="46dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="44dp"
         android:backgroundTint="@color/gray"
         android:fontFamily="@font/roboto"
         android:text="@string/btnCancelCreate"
-        app:layout_constraintEnd_toStartOf="@+id/btnSaveEdit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEditCourse" />
 
@@ -40,11 +38,13 @@
         android:id="@+id/btnSaveEdit"
         android:layout_width="98dp"
         android:layout_height="48dp"
-        android:layout_marginTop="46dp"
-        android:layout_marginEnd="101dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="100dp"
         android:fontFamily="@font/roboto"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnCancelEdit"
         app:layout_constraintTop_toBottomOf="@+id/etEditCourse" />
 
     <TextView
