--- a/app-tracker-student/app/src/main/res/layout/activity_registration_view.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_registration_view.xml
@@ -94,7 +94,7 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="@font/roboto"
-        android:text="Teacher's Registration"
+        android:text="Student's Registration"
         android:textColor="#004D40"
         android:textSize="25sp"
         android:textStyle="bold"
