--- a/app-tracker-teacher/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_edit_profile.xml
@@ -107,7 +107,7 @@
         android:layout_marginStart="99dp"
         android:layout_marginTop="60dp"
         android:backgroundTint="@color/gray"
-        android:text="@android:string/cancel"
+        android:text="@string/btnExit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputLastName" />
 
