--- a/app-tracker-teacher/app/src/main/res/layout/activity_edit_course.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_edit_course.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditCourse">
+    tools:context=".EditCourseActivity">
 
     <EditText
         android:id="@+id/etEditCourse"
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editCourseHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/txtEditACourseHeader" />
 
     <Button
         android:id="@+id/btnCancelEdit"
@@ -48,19 +48,19 @@
         app:layout_constraintTop_toBottomOf="@+id/etEditCourse" />
 
     <TextView
-        android:id="@+id/editCourseHeader"
+        android:id="@+id/txtEditACourseHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="121dp"
         android:layout_marginTop="220dp"
         android:layout_marginEnd="122dp"
         android:fontFamily="@font/roboto"
-        android:text="EDIT A COURSE"
+        android:text="EDIT MOBDEVE - S13"
         android:textColor="#004D40"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
