--- a/app-tracker-teacher/app/src/main/res/layout/activity_registration_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_registration_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingStart="30dp"
     android:paddingEnd="30dp"
-    tools:context=".RegistrationView">
+    tools:context=".RegistrationActivity">
 
     <EditText
         android:id="@+id/inputFirstName"
