--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SingleMeetingView"
+    tools:context=".SingleMeetingActivity"
     tools:layout_editor_absoluteX="-25dp"
     tools:layout_editor_absoluteY="10dp">
 
