--- a/app-tracker-teacher/app/src/main/res/layout/layout_course_request.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_course_request.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp">
@@ -21,9 +21,8 @@
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imgProfilePic"
-        android:layout_marginStart="10dp"/>
+        android:layout_marginStart="30dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,7 +30,7 @@
         android:id="@+id/txtIdNo"
         android:textSize="25sp"
         android:text="11839260"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="30dp"
         app:layout_constraintTop_toBottomOf="@id/txtStudentName"
         app:layout_constraintStart_toEndOf="@id/imgProfilePic"
         />
@@ -59,8 +58,6 @@
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
