--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
@@ -56,9 +56,7 @@
         android:id="@+id/tvMeeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="187dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="184dp"
         android:fontFamily="sans-serif"
         android:text="CODE:"
         android:textColor="#004D40"
@@ -68,16 +66,15 @@
         app:layout_constraintTop_toBottomOf="@+id/statusBar" />
 
     <TextView
-        android:id="@+id/tvCourseCode"
+        android:id="@+id/tvMeetingCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="137dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="137dp"
         android:fontFamily="@font/roboto"
         android:text="MOBDEVE+S15+0001"
         android:textColor="#004D40"
         app:layout_constraintEnd_toEndOf="parent"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMeeting" />
 
@@ -98,7 +95,8 @@
             android:textColor="#004D40"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="9dp" />
 
         <TextView
             android:id="@+id/txtStatus"
@@ -125,7 +123,7 @@
         android:layout_marginTop="37dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvCourseCode"
+        app:layout_constraintTop_toBottomOf="@+id/tvMeetingCode"
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
