--- a/app-tracker-teacher/app/src/main/res/layout/activity_classlist.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_classlist.xml
@@ -89,6 +89,7 @@
                 android:id="@+id/img_profilePic"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 android:src="@drawable/img_tempimage" />
 
         </androidx.cardview.widget.CardView>
