fixed center crop of picture

--- a/app-tracker-teacher/app/src/main/res/layout/activity_edit_account_security.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_edit_account_security.xml
@@ -83,11 +83,11 @@
         android:layout_marginEnd="118dp"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnCancel"
+        app:layout_constraintStart_toEndOf="@+id/btnDeleteRequest"
         app:layout_constraintTop_toBottomOf="@+id/inputConfirmNewPassword" />
 
     <Button
-        android:id="@+id/btnCancel"
+        android:id="@+id/btnDeleteRequest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="99dp"
