--- a/app-tracker-teacher/app/src/main/res/layout/layout_course_request.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_course_request.xml
@@ -1,63 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp">
 
-    <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:id="@+id/imgProfilePic"
-        android:src="@drawable/img_tempimage"
-        android:background="@drawable/template_rounded_corner"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtStudentName"
-        android:text="FirstName C. LastName"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/imgProfilePic"
-        android:layout_marginStart="30dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtIdNo"
-        android:textSize="25sp"
-        android:text="11839260"
-        android:layout_marginStart="30dp"
-        app:layout_constraintTop_toBottomOf="@id/txtStudentName"
-        app:layout_constraintStart_toEndOf="@id/imgProfilePic"
-        />
-
-
-    <Button
-        android:id="@+id/btnConfirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btnConfirm"
-        app:layout_constraintTop_toBottomOf="@id/txtIdNo"
-        app:layout_constraintStart_toEndOf="@id/imgProfilePic"
-        app:layout_constraintEnd_toStartOf="@id/btnCancel"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"/>
-
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="cancel"
-        android:backgroundTint="@color/gray"
-        app:layout_constraintStart_toEndOf="@id/btnConfirm"
-        app:layout_constraintTop_toBottomOf="@id/txtIdNo"
-        android:layout_marginTop="10dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardAcceptStudents"
+        app:cardCornerRadius="14dp"
+        app:cardElevation="5dp"
+        app:cardBackgroundColor="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/txtAcceptStudentName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/roboto"
+                android:text="FirstName C. LastName"
+                android:textColor="#004D40"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/guideline3"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/txtAcceptIdNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="7dp"
+                android:fontFamily="@font/roboto"
+                android:text="11839260"
+                android:textColor="#004D40"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@+id/guideline3"
+                app:layout_constraintTop_toBottomOf="@+id/txtAcceptStudentName" />
+
+            <ImageView
+                android:id="@+id/imgProfilePic"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_tempimage"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/btnDeleteRequest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="9dp"
+                android:backgroundTint="@color/gray"
+                android:fontFamily="@font/roboto_medium"
+                android:text="@string/btnDelete"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btnConfirm"
+                app:layout_constraintTop_toBottomOf="@+id/txtAcceptIdNo" />
+
+            <Button
+                android:id="@+id/btnConfirm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="9dp"
+                android:fontFamily="@font/roboto_medium"
+                android:text="@string/btnConfirm"
+                app:layout_constraintStart_toEndOf="@+id/guideline3"
+                app:layout_constraintTop_toBottomOf="@+id/txtAcceptIdNo" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="116dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
