--- a/app-tracker-teacher/app/src/main/res/layout/layout_singlemeeting_studentlist.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_singlemeeting_studentlist.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtStudentName"
+        android:id="@+id/txtAcceptStudentName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
