--- a/app-tracker-teacher/app/src/main/res/layout/layout_course_request.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_course_request.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardAcceptStudents"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="14dp"
         app:cardElevation="5dp"
-        app:cardBackgroundColor="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -23,15 +29,17 @@
 
             <TextView
                 android:id="@+id/txtAcceptStudentName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="13dp"
                 android:fontFamily="@font/roboto"
                 android:text="FirstName C. LastName"
                 android:textColor="#004D40"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/guideline3"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,7 +52,7 @@
                 android:fontFamily="@font/roboto"
                 android:text="11839260"
                 android:textColor="#004D40"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/guideline3"
                 app:layout_constraintTop_toBottomOf="@+id/txtAcceptStudentName" />
 
@@ -71,6 +79,8 @@
                 android:backgroundTint="@color/gray"
                 android:fontFamily="@font/roboto_medium"
                 android:text="@string/btnDelete"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnConfirm"
                 app:layout_constraintTop_toBottomOf="@+id/txtAcceptIdNo" />
@@ -83,6 +93,8 @@
                 android:layout_marginTop="9dp"
                 android:fontFamily="@font/roboto_medium"
                 android:text="@string/btnConfirm"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/guideline3"
                 app:layout_constraintTop_toBottomOf="@+id/txtAcceptIdNo" />
 
