--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
@@ -74,6 +74,9 @@
         android:text="MOBDEVE+S15+0001"
         android:textColor="#004D40"
         app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/template_rounded_corner"
+        android:backgroundTint="@color/light_gray"
+        android:padding="5dp"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMeeting" />
